# ramp-motion

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
configs/: deepstream_app.yaml  nvdspreprocess_config.txt
docs/: DEPLOYMENT.md
docs/superpowers/plans/: 2026-04-23-ramp-motion-pipeline.md
docs/superpowers/specs/: 2026-04-23-ramp-motion-pipeline-design.md
preprocess/: CMakeLists.txt
preprocess/include/: ramp_motion_preproc.h
preprocess/src/: clahe_mog2.cu  custom_lib.cpp  motion_meta.cpp
ramp_motion/: app.py  config.py  events_log.py  frame_saver.py  manifest.py  probe.py  state_machine.py
tests/: conftest.py  test_config.py  test_events_log.py  test_frame_saver.py  test_manifest.py  test_preprocess_lib.py  test_state_machine.py
tools/: calibrate_roi.py
